--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,4 +1,6 @@
 body {
+  width: 100%;
+  height: 100vh;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -17,4 +19,9 @@ code {
   width: 100%;
   background-color: rgb(1, 3, 85);
   color: aliceblue;
+}
+
+.footer {
+  border: 2px inset blue;
+  width: 40%;
 }
