--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -80,3 +80,26 @@ code {
 .img:hover {
   background-color: #333;
 }
+
+body {
+  background-color: peru;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.cont {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn1 {
+  padding: 2rem;
+  border-radius: 2rem;
+  font-size: 2rem;
+  color: black;
+  background: none;
+  cursor: pointer;
+}
