--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -82,7 +82,7 @@ code {
 }
 
 body {
-  background-color: peru;
+  background-color: rgb(26, 25, 25);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -90,16 +90,26 @@ body {
 }
 
 .cont {
-  display: flex;
+  display: grid;
   align-items: center;
-  justify-content: center;
+  font-size: 2rem;
+  color: aliceblue;
 }
 
-.btn1 {
+h1 {
+  color: gainsboro;
+  font-size: 3rem;
+  text-align: center;
+}
+
+h2 {
+  border-radius: 50%;
   padding: 2rem;
-  border-radius: 2rem;
   font-size: 2rem;
-  color: black;
-  background: none;
-  cursor: pointer;
+  background-color: white;
+  color: #333;
+  text-align: center;
+  width: 15%;
+  margin: 0 auto;
+  border-radius: 50%;
 }
