--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,115 +1,47 @@
-/* body {
-  width: 100%;
-  height: 100vh;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
-.h1s {
-  min-height: 5rem;
-  width: 100%;
-  background-color: rgb(1, 3, 85);
-  color: aliceblue;
-}
-
-.footer {
-  border: 2px inset blue;
-  width: 40%;
-}
-
-.nav {
-  width: 100px;
-  height: 100px;
-}
-
-.text1 {
-  opacity: 60%;
-}
-
-.container {
-  padding: 1rem;
-  display: flex;
-  overflow: scroll;
-} */
-/* * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: concert one;
-}
-
-.navii {
-  background-color: rgb(255, 78, 78);
-  width: 100%;
-  height: 100%;
-  color: whitesmoke;
-  text-align: center;
-  padding: 1rem;
-}
-
-.header {
-  font-size: 1rem;
-  font-weight: 100;
-}
-
-.body {
-  margin: 2rem 0;
-}
-
-.pog {
-  margin: 2rem 0;
-  background-color: rgb(221, 221, 221);
-  padding: 1rem;
-  border-radius: 10px;
-  box-shadow: 5px 5px rgba(51, 51, 51, 0.267);
-}
- */
-.img {
-  cursor: pointer;
-}
-
-.img:hover {
-  background-color: #333;
-}
-
 body {
-  background-color: rgb(26, 25, 25);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  background-color: peru;
+  width: 100%;
   height: 100vh;
+  font-family: viga;
 }
 
-.cont {
-  display: grid;
+.main {
+  display: flex;
   align-items: center;
-  font-size: 2rem;
-  color: aliceblue;
+  justify-content: center;
+  height: 100vh;
+  position: relative;
 }
 
-h1 {
-  color: gainsboro;
-  font-size: 3rem;
-  text-align: center;
+.counter--count {
+  background-color: azure;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  z-index: -10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-h2 {
+button {
+  background-color: rgb(104, 104, 104);
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
-  padding: 2rem;
-  font-size: 2rem;
-  background-color: rgb(255, 255, 255);
-  color: #333;
-  text-align: center;
-  width: 15%;
-  margin: 0 auto;
-  border-radius: 50%;
+  cursor: pointer;
+  border-style: none;
+  color: white;
+}
+
+.counter--minus {
+  position: absolute;
+  top: 156px;
+  left: 32%;
+}
+
+.counter--minus {
+  position: absolute;
+  top: 156px;
+  left: 32%;
 }
