--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -142,7 +142,7 @@ body {
   justify-content: center;
 }
 
-button {
+.div {
   background-color: rgb(145, 28, 28);
   width: 40px;
   height: 40px;
